--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         </activity>
         <activity android:name=".activity.WriteDayPlanActivity">
 
+
+
+        </activity>
+        <!--写周计划界面-->
+        <activity android:name=".activity.WriteWeekPlanActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
