申中佳标题头布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
 
         </activity>
         <activity android:name=".activity.JournalManagerActivity">
@@ -23,13 +27,11 @@
         </activity>
         <!--写周计划界面-->
         <activity android:name=".activity.WriteWeekPlanActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
 
         </activity>
+        <!--部门员工日志管理首页-->
+        <activity android:name=".activity.DepartmentEmployeesLogManagementMainActivity"/>
     </application>
 
 </manifest>
