销售日计划详情、日总结详情、周总结、周计划详情；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -52,16 +53,23 @@
         <!-- 我的日志 -->
         <activity android:name=".activity.MyJournalActivity">
         </activity>
+        <!--预测到单客户-->
         <activity android:name=".activity.SingleCustomer">
         </activity>
+
+        <!--重点意向客户-->
         <activity android:name=".activity.MajorCustomerActivity">
         </activity>
+        <!--回款到单-->
         <activity android:name=".activity.GetMoneyActivity">
         </activity>
+        <!--今日工作量-->
         <activity android:name=".activity.TodayWorkLoadActivity">
         </activity>
+        <!--预测单客户踩中-->
         <activity android:name=".activity.GetSingleCustomerActivity">
         </activity>
+        <!--新增意向客户-->
         <activity android:name=".activity.AddPurposeCustomerActivity">
         </activity>
         <!-- 部门员工日志管理首页 -->
@@ -70,7 +78,20 @@
         <activity android:name=".activity.DepartmentEmployeesLogManagementSerachActivity"/>
         <activity android:name=".activity.HtDayplanDetails">
         </activity>
+        <!--后台日总结详情-->
         <activity android:name=".activity.HtDaysumDetailsActivity">
+        </activity>
+        <!--销售日计划详情-->
+        <activity android:name=".activity.XsDayplanDetailsActivity">
+        </activity>
+        <!--销售日总结详情-->
+        <activity android:name=".activity.XsDaysumDetailsActivity">
+        </activity>
+        <!--周计划详情-->
+        <activity android:name=".activity.WeekplanDetailsActivity">
+        </activity>
+        <!--周总结详情-->
+        <activity android:name=".activity.WeeksumDetailsActivity">
         </activity>
     </application>
 
