--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+    <!-- shareSDK -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" /><!--动态权限-->
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -51,7 +58,6 @@
         <!-- 写周总结界面 -->
         <activity android:name=".activity.WriteWeekConclusionActivity"/>
 
-
         <!-- 我的日志 -->
         <activity android:name=".activity.MyJournalActivity">
         </activity>
@@ -66,8 +72,9 @@
         <activity android:name=".activity.GetMoneyActivity">
         </activity>
         <!-- 今日工作量 -->
-        <activity android:name=".activity.TodayWorkLoadActivity"
-                  android:windowSoftInputMode="stateHidden">
+        <activity
+            android:name=".activity.TodayWorkLoadActivity"
+            android:windowSoftInputMode="stateHidden">
         </activity>
         <!-- 预测单客户踩中 -->
         <activity android:name=".activity.GetSingleCustomerActivity">
@@ -100,6 +107,41 @@
         </activity>
         <activity android:name=".activity.XsWriteDaysumActivity">
         </activity>
+        <activity android:name=".aboutmy.MycardActivity">
+        </activity>
+
+        <!-- shareSDK 的activity -->
+        <activity
+            android:name="com.mob.tools.MobUIShell"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:windowSoftInputMode="stateHidden|adjustResize">
+            <intent-filter>
+                <data android:scheme="tencent1105662792" />
+
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <!-- 调用新浪原生SDK，需要注册的回调activity -->
+            <intent-filter>
+                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <!-- 微信分享回调 -->
+        <activity
+            android:name=".sharesdk.demo.wxapi.WXEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
     </application>
 
 </manifest>
