--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.github.thinkcool:circletextimageview:1.0.20151218'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile files('libs/BaiduLBS_Android.jar')
 }
