--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile 'com.github.thinkcool:circletextimageview:1.0.20151218'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
 }
