--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     compile 'com.github.thinkcool:circletextimageview:1.0.20151218'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.prolificinteractive:material-calendarview:1.4.3'
 }
