--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -144,9 +144,9 @@
         <!-- 新增意向客户 -->
         <activity android:name=".activity.journalmanager.AddPurposeCustomerActivity"/>
         <!-- 部门员工日志管理首页 -->
-        <activity android:name=".activity.journalmanager.DepartmentEmployeesLogManagementMainActivity"/>
+        <activity android:name=".activity.journalmanager.DepartmentMainActivity"/>
         <!-- 部门员工日志管理搜索页 -->
-        <activity android:name=".activity.journalmanager.DepartmentEmployeesLogManagementSerachActivity"/>
+        <activity android:name=".activity.journalmanager.DepartmentSerachActivity"/>
         <activity android:name=".activity.journalmanager.HtDayplanDetails"/>
         <!-- 后台日总结详情 -->
         <activity android:name=".activity.journalmanager.HtDaysumDetailsActivity"/>
