--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.jph.takephoto:takephoto_library:4.0.3'
+    compile files('libs/sun.misc.BASE64Decoder.jar')
 }
