--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
         <!-- 外勤统计 -->
         <activity android:name=".activity.field.FieldStatisticsAcrivity"/>
         <!-- 客户拜访 -->
-        <activity android:name=".activity.field.CustomerCallActivity"/>
+        <activity android:name=".activity.field.CustomerCallActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <!-- 我的拜访记录 -->
         <activity android:name=".activity.field.MyCallRecordActivity"/>
         <!-- 客户拜访情况 -->
@@ -214,6 +215,8 @@
         <activity android:name=".activity.aboutdocument.DocumentNomalProcessActivity" />
         <activity android:name=".activity.aboutdocument.SubDocumentActivity" />
         <activity android:name=".activity.aboutdocument.DocSelectPersonActivity"></activity>
+        <!--图片放大浏览-->
+        <activity android:name=".activity.ImageBrowsingActivity"/>
     </application>
 
 </manifest>
